@@ -1,5 +1,8 @@
 /*
  * $Log: set_environment.c,v $
+ * Revision 1.4  2021-07-04 23:58:27+05:30  Cprogrammer
+ * skip .defaultqueue if running as root
+ *
  * Revision 1.3  2021-06-12 19:56:17+05:30  Cprogrammer
  * removed calls to chdir to avoid messing cwd
  *
@@ -30,7 +33,7 @@ set_environment(char *warn, char *fatal)
 	char           **e;
 	int             i;
 
-	if ((home = env_get("HOME"))) {
+	if (getuid() && (home = env_get("HOME"))) {
 		if (!stralloc_copys(&tmp, home) ||
 				!stralloc_catb(&tmp, "/.defaultqueue", 14) ||
 				!stralloc_0(&tmp))
@@ -79,7 +82,7 @@ set_environment(char *warn, char *fatal)
 void
 getversion_set_environment_c()
 {
-	static char    *x = "$Id: set_environment.c,v 1.3 2021-06-12 19:56:17+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: set_environment.c,v 1.4 2021-07-04 23:58:27+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
