@@ -169,6 +169,7 @@ Release 2.13 Start 14/02/2021
      mode (queue-fix -m)
 107. queue-fix: added -m option for qmta-send where dirs are owned by
      qmailq
+108. set_environment.c: skip $HOME/.defaultqueue if running as root
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 2.12 Start 21/05/2020
